auth, notifications, and payments have local package.json with app-level dependencies
The main package.json only includes the common dependencies

--- a/apps/auth/Dockerfile
+++ b/apps/auth/Dockerfile
@@ -11,6 +11,8 @@ RUN npm install -g pnpm
 RUN pnpm install
 COPY apps/auth apps/auth
 COPY libs libs
+RUN cd apps/auth && pnpm install
+
 RUN pnpm run build
 
 # Production
