--- a/apps/notifications/Dockerfile
+++ b/apps/notifications/Dockerfile
@@ -11,6 +11,8 @@ RUN npm install -g pnpm
 RUN pnpm install
 COPY apps/notifications apps/notifications
 COPY libs libs
+RUN cd apps/notifications && pnpm install
+
 RUN pnpm run build
 
 # Production
