include nest-cli.json, apps install recursively and build respective app (rather than all apps)

--- a/apps/payments/Dockerfile
+++ b/apps/payments/Dockerfile
@@ -6,14 +6,15 @@ WORKDIR /usr/src/app
 COPY package.json ./
 COPY pnpm-lock.yaml ./
 COPY tsconfig.json tsconfig.json
+COPY nest-cli.json nest-cli.json
 
 RUN npm install -g pnpm
-RUN pnpm install
+
 COPY apps/payments apps/payments
 COPY libs libs
-RUN cd apps/payments && pnpm install
 
-RUN pnpm run build
+RUN pnpm install -r
+RUN pnpm run build payments
 
 # Production
 FROM node:alpine as production
