--- a/apps/auth/Dockerfile
+++ b/apps/auth/Dockerfile
@@ -6,14 +6,16 @@ WORKDIR /usr/src/app
 COPY package.json ./
 COPY pnpm-lock.yaml ./
 COPY tsconfig.json tsconfig.json
+COPY nest-cli.json nest-cli.json
 
 RUN npm install -g pnpm
-RUN pnpm install
+
 COPY apps/auth apps/auth
 COPY libs libs
-RUN cd apps/auth && pnpm install
 
-RUN pnpm run build
+RUN pnpm install -r
+
+RUN pnpm run build auth
 
 # Production
 FROM node:alpine as production
