--- a/apps/reservations/Dockerfile
+++ b/apps/reservations/Dockerfile
@@ -6,12 +6,14 @@ WORKDIR /usr/src/app
 COPY package.json ./
 COPY pnpm-lock.yaml ./
 COPY tsconfig.json tsconfig.json
+COPY nest-cli.json nest-cli.json
 
 RUN npm install -g pnpm
 RUN pnpm install
 COPY apps/reservations apps/reservations
 COPY libs libs
-RUN pnpm run build
+
+RUN pnpm run build reservations
 
 # Production
 FROM node:alpine as production
