--- a/apps/payments/Dockerfile
+++ b/apps/payments/Dockerfile
@@ -5,11 +5,16 @@ WORKDIR /usr/src/app
 
 COPY package.json ./
 COPY pnpm-lock.yaml ./
+COPY tsconfig.json tsconfig.json
+COPY nest-cli.json nest-cli.json
 
 RUN npm install -g pnpm
-RUN pnpm install
-COPY . .
-RUN pnpm run build
+
+COPY apps/payments apps/payments
+COPY libs libs
+
+RUN pnpm install -r
+RUN pnpm run build payments
 
 # Production
 FROM node:alpine as production
