--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 # compiled output
 /dist
-/node_modules
+**/node_modules
 /build
 
 # Logs
@@ -54,3 +54,5 @@ pids
 
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
+
+build.sh
