--- a/apps/reservations/Dockerfile
+++ b/apps/reservations/Dockerfile
@@ -5,11 +5,15 @@ WORKDIR /usr/src/app
 
 COPY package.json ./
 COPY pnpm-lock.yaml ./
+COPY tsconfig.json tsconfig.json
+COPY nest-cli.json nest-cli.json
 
 RUN npm install -g pnpm
 RUN pnpm install
-COPY . .
-RUN pnpm run build
+COPY apps/reservations apps/reservations
+COPY libs libs
+
+RUN pnpm run build reservations
 
 # Production
 FROM node:alpine as production
