--- a/k8s/sleepr/templates/auth/deployment.yaml
+++ b/k8s/sleepr/templates/auth/deployment.yaml
@@ -15,7 +15,7 @@ spec:
         app: auth
     spec:
       containers:
-        - image: us-east4-docker.pkg.dev/disco-skyline-416915/auth/production
+        - image: 411695669162.dkr.ecr.us-east-1.amazonaws.com/auth:latest
           name: auth
           env:
             - name: MONGODB_URI
