--- a/k8s/sleepr/templates/notifications/deployment.yaml
+++ b/k8s/sleepr/templates/notifications/deployment.yaml
@@ -15,7 +15,7 @@ spec:
         app: notifications
     spec:
       containers:
-        - image: us-east4-docker.pkg.dev/disco-skyline-416915/notifications/production
+        - image: 411695669162.dkr.ecr.us-east-1.amazonaws.com/notifications:latest
           name: notifications
           env:
             - name: PORT
