--- a/k8s/sleepr/templates/payments/deployment.yaml
+++ b/k8s/sleepr/templates/payments/deployment.yaml
@@ -15,7 +15,7 @@ spec:
         app: payments
     spec:
       containers:
-        - image: us-east4-docker.pkg.dev/disco-skyline-416915/payments/production
+        - image: 411695669162.dkr.ecr.us-east-1.amazonaws.com/payments:latest
           name: payments
           env:
             - name: PORT
