--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "test:e2e": "docker-compose --project-directory ./e2e up e2e"
   },
   "dependencies": {
+    "@grpc/grpc-js": "^1.10.4",
+    "@grpc/proto-loader": "^0.7.11",
     "@nestjs/common": "^10.3.3",
     "@nestjs/config": "^3.2.0",
     "@nestjs/core": "^10.0.0",
@@ -42,6 +44,7 @@
     "pino-pretty": "^10.3.1",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
+    "ts-proto": "^1.170.0",
     "typeorm": "^0.3.20"
   },
   "devDependencies": {
